--- a/Mapping_GeoJSON_Polygons/index.html
+++ b/Mapping_GeoJSON_Polygons/index.html
@@ -11,6 +11,7 @@
     crossorigin=""/>
     <!-- Our CSS -->
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
+    <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 <body>
     <!-- The div that holds our map -->
@@ -24,7 +25,6 @@
     <!-- API key -->
     <script type="text/javascript" src="static/js/config.js"></script>
     <!-- Our JavaScript -->
-    <script type="text/javascript" src="static/js/cities.js"></script>
     <script type="text/javascript" src="static/js/logic.js"></script>
 
 </body>
